# grud

./: CHANGELOG.md  Cargo.toml  README.md  coverage.sh  idioms.md
.github/actions-rs/: grcov.yml
.github/workflows/: grcov.yml  rust.yml
src/: grid.rs  lib.rs  point.rs
